Fix spacing issues with margin attributes to p, ul, and h2 tags.

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -4,8 +4,8 @@
 ------------------------------------------ */
 
 * {
-	margin:3px;
-	padding:3px;
+	margin:0px;
+	padding:0px;
 }
 
 html {
@@ -21,14 +21,14 @@ body {
 ------------------------------------------ */
 	
 h2 {
-	margin: 0 0 0.25em; 
+	margin: 5px;
 	color: #444; 
 	text-align: center;
-	font: bold 2.154em "Dosis",sans-serif;	
+	font: bold 2.154em sans-serif;	
 }
 
 .container {
-	width:550px;
+	width:700px;
 	background-color:#eeeeee;
 	margin-left:auto;
 	margin-right:auto;
@@ -43,6 +43,11 @@ h2 {
 	-moz-box-shadow: 0px 4px 15px #666;
 	-webkit-box-shadow: 0px 4px 15px #666;
 	box-shadow: 0px 4px 15px #666;
+}
+
+p {
+	margin:10px;
+	line-height:15px;
 }
 
 a {
@@ -64,10 +69,17 @@ a * {
 }
 
 #navigation {
+	margin: 10px;
 	padding: 6px;
 	width:100%;
 	text-align:center;
 	
+}
+
+#navigation ul {
+	margin: 10px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 #navigation li {
